# Float-Protocols

./: .gitignore  .kicad_sch  Cargo.toml  ERC 0.3.rpt  ERC 0.4.rpt  ERC 0.5.rpt  ERC 0.6.rpt  HARDWARE_V0.1.0_CHANGES.md  README.md  float_gateway 0.0.3 .kicad_prl  float_gateway 0.0.3 .kicad_pro  float_gateway 0.0.4 .kicad_sch  float_gateway 0.1.0.kicad_sch  ~float_gateway 0.1.0.kicad_sch.lck
.github/workflows/: ci.yml
benches/: latency_bench.rs
src/: asts_protobuf.rs  batcher.rs  bitemporal.rs  cache.rs  cadence_translation.rs  clock_reconciliation.rs  dynamic_buffer.rs  gateway.rs  hfvhf.rs  iridium_sbd.rs  lib.rs  lifetime_safe.rs  main.rs  metrics.rs  nidd.rs  otel_bundle.rs  otel_compact_span.rs  otel_converter.rs  otel_reconciler.rs  protocol.rs  reliability.rs  samsara.rs  sharding.rs  snapshot.rs  translator.rs  transmission_batcher.rs
src/gnss/: gnss.rs  mod.rs  rtc.rs
src/hardware/: atecc608b.rs  bg95.rs  config_button.rs  gm02sp.rs  led.rs  lr1121.rs  mod.rs  sx1262.rs  watchdog.rs
src/lora/: mesh.rs  mod.rs  node_registry.rs
src/provisioning/: lora_provisioning.rs  mod.rs  provision.rs
src/sensor/: can.rs  mod.rs  rs232.rs  rs485.rs
src/storage/: encrypted_store.rs  mod.rs  wal.rs
tests/: chaos_dependency_failure.rs  chaos_network_partition.rs  chaos_partial_degradation.rs  integration_deadzone.rs  integration_protocol_translation.rs  stress_race.rs
