[package]
name = "float_protocols"
version = "0.4.4"
edition = "2021"
authors = ["Float Protocols Team"]
description = "Float Protocols - Ultra-lightweight async protocol translation bridge for dead zone communication systems"
license = "Apache-2.0"
repository = "https://github.com/theoddden/float-protocols"
readme = "README.md"

[dependencies]
# Async runtime - minimal features for size optimization
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal"], default-features = false }
tokio-util = { version = "0.7", features = ["codec", "compat"], default-features = false }

# Core - minimal dependencies for ultra-lightweight footprint
bytes = { version = "1.5", features = ["serde"] }

# Serialization (minimal)
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
bincode = "1.3"

# Protocol parsing
nom = "7.1"  # Parser combinator for protocol parsing
hex = "0.4"  # Hex encoding/decoding
zstd = "0.13"  # Compression for VSAT
crc = "3.0"  # CRC checksums for payload validation
crc32fast = "1.3"  # CRC32 for WAL
flate2 = "1.0"  # Gzip compression for OTel bundles

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

dashmap = "6.0"           # Lock-free concurrent hashmap for sharding
parking_lot = "0.12"      # Non-poisoning mutex/rwlock, faster than std on the async hot path
crossbeam-channel = "0.5" # Lock-free channels for per-shard worker queues

# Logging
log = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"], optional = true }

# Metrics (optional for production monitoring)
metrics = { version = "0.21", default-features = false, optional = true }

# Hardware I/O (Raspberry Pi CM5) - optional for CI
rppal = { version = "0.17", optional = true }          # GPIO, SPI, I2C
serialport = { version = "4.6", optional = true }      # UART (BG95-S5, MAX3232)
spidev = { version = "0.5", optional = true }          # Linux spidev (SX1262)
socketcan = { version = "3.3", optional = true }       # Linux SocketCAN

# GNSS
nmea = "0.7"            # NMEA sentence parser

# Provisioning / PKI
rcgen = "0.13"          # X.509 CSR generation
rand = "0.8"            # Random number generation

# Crypto
sha2 = "0.10"
hmac = "0.12"

[profile.release]
opt-level = "z"           # Optimize for size
lto = "fat"              # Fat LTO for better optimization
codegen-units = 1         # Single codegen unit
strip = true              # Strip symbols
panic = "abort"           # Abort on panic (reduces size)
overflow-checks = false   # Disable overflow checks (unsafe)
debug-assertions = false  # Disable debug assertions

[profile.release.package."*"]
opt-level = "z"           # Optimize dependencies for size
codegen-units = 1         # Single codegen unit for dependencies

[profile.dev]
opt-level = "s"  # Optimize for size in dev too

[dev-dependencies]
criterion = "0.5"

[features]
default = ["std"]
std = ["tokio/rt-multi-thread", "tracing-subscriber"]
tracing = ["tracing-subscriber"]
metrics = ["dep:metrics"]
hardware = ["rppal", "serialport", "spidev", "socketcan"]
no-std = []  # For embedded targets

[workspace]
members = ["."]
